tests/ui/rfcs/rfc-2632-const-trait-impl/super-traits.stderr
error[E0277]: the trait bound `Param<host>: TyCompat<Foo::{synthetic#0}>` is not satisfied
  --> $DIR/super-traits.rs:23:7
   |
LL |     t.a();
   |       ^ the trait `TyCompat<Foo::{synthetic#0}>` is not implemented for `Param<host>`
   |
note: required by a bound in `Foo::a`
  --> $DIR/super-traits.rs:7:1
   |
LL | #[const_trait]
   | ^^^^^^^^^^^^^^ required by this bound in `Foo::a`
LL | trait Foo {
LL |     fn a(&self);
   |        - required by a bound in this associated function
help: consider introducing a `where` clause, but there might be an alternative better way to express this requirement
   |
LL | const fn foo<T: ~const Bar>(t: &T) where Param<host>: TyCompat<Foo::{synthetic#0}> {
   |                                    +++++++++++++++++++++++++++++++++++++++++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
